first draft home page with navbar, footer and bootstrap cards

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,8 +48,76 @@
             </form>
           </div>
         </div>
-      </nav>
-    
-    
+    </nav>
+
+    <div class="card-container d-flex p-6 justify-content-around flex-wrap" style=" margin-bottom: 20px">
+      <div class="card" style="width: 22rem; margin-top: 20px;" id="trucker">
+        <img src="https://images.unsplash.com/photo-1591768793355-74d04bb6608f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2552&q=80" class="card-img-top" alt="...">
+        <span></span>
+        <div class="card-body">
+          <p class="card-text">Transportation</p>
+          <p class="card-text">Pay Range: $38k - 89k per year</p>
+        </div>
+      </div>
+
+      <div class="card" style="width:22rem; margin-top: 20px;" id="welder">
+        <img src="https://images.unsplash.com/photo-1507497642206-b5c42198f2df?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2553&q=80" class="card-img-top" alt="...">
+        <span></span>
+        <div class="card-body">
+          <p class="card-text">Welding</p>
+          <p class="card-text">Pay Range: $55k - 110k per year</p>
+        </div>
+      </div>
+
+      <div class="card" style="width:22rem; margin-top: 20px;" id="carpenter">
+        <img src="https://images.unsplash.com/photo-1596496181961-4326beb30551?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2550&q=80" class="card-img-top" alt="...">
+        <span></span>
+        <div class="card-body">
+          <p class="card-text">Carpentry</p>
+          <p class="card-text">Pay Range: $44k - 76k per year</p>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem; margin-top: 20px;" id="hvac">
+        <img src="https://skillpointe.com/sites/default/files/2021-02/HVAC_Technician.jpg" class="card-img-top" alt="...">
+        <span></span>
+        <div class="card-body">
+          <p class="card-text">HVACR</p>
+          <p class="card-text">Pay Range: $30k - 91k per year</p>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem; margin-top: 20px;" id="electric">
+        <img src="https://images.unsplash.com/photo-1555963966-b7ae5404b6ed?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" class="card-img-top" alt="...">
+        <span></span>
+        <div class="card-body">
+          <p class="card-text">Electrical</p>
+          <p class="card-text">Pay Range: $34k - 76k per year</p>
+        </div>
+      </div>
+
+      <div class="card" style="width: 22rem; margin-top: 20px;" id="plumbing">
+        <img src="https://www.neyerplumbing.com/blog/wp-content/uploads/2020/02/KenNeyer-1024x683.jpg" class="card-img-top" alt="...">
+        <span></span>
+        <div class="card-body">
+          <p class="card-text">Plumbing</p>
+          <p class="card-text">Pay Range: $44k - 110k per year</p>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Footer -->
+    <footer class="footer py-3 bg-dark">
+      <div class="container text-center">
+        <span class="text-light">Skilled Tradesman - 2021</span>
+      </div>
+    </footer>
+<!-- <script src="./truc.js"></script>
+<script src="./weld.js"></script>
+<script src="./carp.js"></script>
+<script src="./plum.js"></script>
+<script src="./hvac.js"></script>
+<script src="./elec.js"></script> -->
 </body>
 </html>
