consolidated endpoints and added category.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,12 +27,12 @@
                       Vocations
                     </a>
                     <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Carpentry</a></li>
-                        <li><a class="dropdown-item" href="#">Electrical</a></li>
-                        <li><a class="dropdown-item" href="#">HVACR</a></li>
-                        <li><a class="dropdown-item" href="#">Transportation</a></li>
-                        <li><a class="dropdown-item" href="#">Plumbing</a></li>
-                        <li><a class="dropdown-item" href="#">Welding</a></li>
+                        <li><a class="dropdown-item" href="/vocations/carpentry">Carpentry</a></li>
+                        <li><a class="dropdown-item" href="/vocations/electrical">Electrical</a></li>
+                        <li><a class="dropdown-item" href="/vocations/hvacr">HVACR</a></li>
+                        <li><a class="dropdown-item" href="/vocations/transportation">Transportation</a></li>
+                        <li><a class="dropdown-item" href="/vocations/plumbing">Plumbing</a></li>
+                        <li><a class="dropdown-item" href="/vocations/welding">Welding</a></li>
                     </ul>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
