fixed footer to bottom of viewport on all pages and rendered more info on cards

--- a/templates/home.html
+++ b/templates/home.html
@@ -108,7 +108,7 @@
 
 
     <!-- Footer -->
-    <footer class="footer py-3 bg-dark">
+    <footer class="footer py-3 bg-dark fixed-bottom">
       <div class="container text-center">
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
