--- a/templates/category.html
+++ b/templates/category.html
@@ -51,20 +51,22 @@
     </nav>
 
     ${ results.map( job => `
-    <div class="card-container">
+    <div class="card-container mt-2 mb-2 d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
             <h3 class="card-title">${job.employer}</h3>
-            <h6 class="card-subtitle mb-2 text-muted">${job.location}</h6>
+            <h6 class="card-subtitle mb-2">${job.jobTitle}</h6>
+            <h6 class="card-subtitle mb-2">${job.location}</h6>
             <p class="card-text">${job.desc}.</p>
-            <a href="${job.website}" class="card-link">Apply Now</a>
+            <p class="card-text"><b>Skills:</b> ${job.skills}.</p>
+            <a href="${job.website}" class="btn btn-dark">Apply Now</a>
             </div>
         </div>
     </div>  
     ` ).join("")}
 
     <!-- Footer -->
-    <footer class="footer py-3 bg-dark">
+    <footer class="footer py-3 bg-dark fixed-bottom">
       <div class="container text-center">
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
