adds a modal box that pops up for login

--- a/templates/entry.html
+++ b/templates/entry.html
@@ -13,43 +13,74 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Skilled Tradesman</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#">Skilled Tradesman</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Vocations
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Vocations
                     </a>
                     <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Carpentry</a></li>
-                        <li><a class="dropdown-item" href="#">Electrical</a></li>
-                        <li><a class="dropdown-item" href="#">HVACR</a></li>
-                        <li><a class="dropdown-item" href="#">Transportation</a></li>
-                        <li><a class="dropdown-item" href="#">Plumbing</a></li>
-                        <li><a class="dropdown-item" href="#">Welding</a></li>
+                    <li><a class="dropdown-item" href="/vocations/carpentry">Carpentry</a></li>
+                    <li><a class="dropdown-item" href="/vocations/electrical">Electrical</a></li>
+                    <li><a class="dropdown-item" href="/vocations/hvacr">HVACR</a></li>
+                    <li><a class="dropdown-item" href="/vocations/transportation">Transportation</a></li>
+                    <li><a class="dropdown-item" href="/vocations/plumbing">Plumbing</a></li>
+                    <li><a class="dropdown-item" href="/vocations/welding">Welding</a></li>
                     </ul>
+                    <!-- Modal for Login -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="modal fade" id="myModal">
+                                        <div class="modal-dialog modal-sm">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1>Please Sign In</h1>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="button-container d-flex  flex-column justify-content-around" style="height: 12rem;">
+                                                        <a class="btn btn-danger btn-social btn-google" href="/auth/google" role="button">
+                                                        <i class="fab fa-google"></i>
+                                                        Sign In With Google
+                                                        </a>
+                                                        <a class="btn btn-primary btn-social btn-facebook" href="/auth/facebook" role="button">
+                                                        <i class="fab fa-facebook"></i>
+                                                        Sign In With Facebook
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    Click to exit
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Login</a>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
-              </li>
+            </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-          </div>
+        </div>
         </div>
     </nav>
-
+    <!-- Main -->
     <div class="form-container-fluid d-flex flex-column" style="border: 1px solid red;">
         <form class="row g-3 p-2 ">
             <div class="col-md-3">
@@ -100,5 +131,8 @@
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 </html>
