--- a/templates/about.html
+++ b/templates/about.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/dcbcb40c25.js" crossorigin="anonymous"></script>
-    <title>Skilled Tradesman - Home</title>
+    <title>Skilled Tradesman - Login</title>
 </head>
 <body>
   <!-- Navbar -->
@@ -79,22 +78,9 @@
         </form>
       </div>
     </div>
-  </nav> 
+  </nav>  
 
-    ${ results.map( job => `
-    <div class="card-container mt-2 mb-2 d-flex justify-content-center">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-            <h3 class="card-title">${job.employer}</h3>
-            <h6 class="card-subtitle mb-2">${job.jobTitle}</h6>
-            <h6 class="card-subtitle mb-2">${job.location}</h6>
-            <p class="card-text">${job.desc}.</p>
-            <p class="card-text"><b>Skills:</b> ${job.skills}.</p>
-            <a href="${job.website}" class="btn btn-dark">Apply Now</a>
-            </div>
-        </div>
-    </div>  
-    ` ).join("")}
+
 
     <!-- Footer -->
     <footer class="footer py-3 bg-dark fixed-bottom">
@@ -102,8 +88,9 @@
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
     </footer>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+
 </body>
 </html>
