--- a/templates/login.html
+++ b/templates/login.html
@@ -33,11 +33,42 @@
                   <li><a class="dropdown-item" href="/vocations/plumbing">Plumbing</a></li>
                   <li><a class="dropdown-item" href="/vocations/welding">Welding</a></li>
                 </ul>
+                <!-- Modal for Login -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="modal fade" id="myModal">
+                                    <div class="modal-dialog modal-sm">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1>Please Sign In</h1>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="button-container d-flex  flex-column justify-content-around" style="height: 12rem;">
+                                                    <a class="btn btn-danger btn-social btn-google" href="/auth/google" role="button">
+                                                      <i class="fab fa-google"></i>
+                                                      Sign In With Google
+                                                    </a>
+                                                    <a class="btn btn-primary btn-social btn-facebook" href="/auth/facebook" role="button">
+                                                      <i class="fab fa-facebook"></i>
+                                                      Sign In With Facebook
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                Click to exit
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#myModal">Login</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
           </li>
         </ul>
@@ -48,28 +79,15 @@
       </div>
     </div>
   </nav>  
-    <!-- Main -->
-    <div class="button-container d-flex justify-content-center align-content-around" style="margin-top: 10rem;">
-        <div class="button-container d-flex  flex-column justify-content-around" style="height: 12rem;">
-          <a class="btn btn-danger btn-social btn-google" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In With Google
-          </a>
-          <a class="btn btn-primary btn-social btn-facebook" href="/auth/facebook" role="button">
-            <i class="fab fa-facebook"></i>
-            Sign In With Facebook
-          </a>
-          <!-- <a class="btn btn-dark btn-social btn-guest" href="#" role="button">
-            <i class="fas fa-user-secret"></i>
-            Sign In As Guest
-          </a> -->
-        </div>
-    </div>
+  
     <!-- Footer -->
     <footer class="footer py-3 bg-dark fixed-bottom">
       <div class="container text-center">
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
     </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 </html>
