deleted unneeded js files

--- a/templates/category.html
+++ b/templates/category.html
@@ -82,8 +82,8 @@
   </nav> 
 
     ${ results.map( job => `
-    <div class="card-container mt-2 mb-2 d-flex justify-content-center">
-        <div class="card" style="width: 18rem;">
+    <div class="card-container mt-2 mb-6">
+        <div class="card d-flex flex-row" style="width: 18rem;">
             <div class="card-body">
             <h3 class="card-title">${job.employer}</h3>
             <h6 class="card-subtitle mb-2">${job.jobTitle}</h6>
