--- a/templates/home.html
+++ b/templates/home.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Skilled Tradesman</a>
+        <a class="navbar-brand" href="/">Skilled Tradesman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,17 +73,13 @@
                   </li>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav> 
     <!-- Main -->
     <main>  
 
-      <div class="card-container d-flex p-6 justify-content-around flex-wrap" style=" margin-bottom: 20px">
+      <div class="card-container d-flex p-6 justify-content-around flex-wrap" style=" margin-bottom: 80px">
         <div class="card" style="width: 22rem; margin-top: 20px;" id="randomImg0">
           <img src="https://images.unsplash.com/photo-1591768793355-74d04bb6608f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2552&q=80" class="card-img-top" alt="...">
           <span></span>
