--- a/templates/home.html
+++ b/templates/home.html
@@ -35,6 +35,9 @@
                         <li><a class="dropdown-item" href="/vocations/welding">Welding</a></li>
                     </ul>
                     <li class="nav-item">
+                      <a class="nav-link" href="/entry">Entry</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
                     </li>
                     <li class="nav-item">
