--- a/templates/entry.html
+++ b/templates/entry.html
@@ -131,39 +131,7 @@
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
     </footer>
-    <!-- <script src="entry.js"></script> -->
-    <script>
-
-        const form = document.getElementById('jobentry-form');
-        form.addEventListener('submit', e => {
-        e.preventDefault();
-        // console.log(e.target);
-        const data = new FormData(e.target);
-        const stringified = stringifyFormData(data);
-        console.log("Form data stringified",stringified);
-        sendData('http://localhost:3000/vocations', stringifyFormData);
-        })
-
-        const stringifyFormData = fd => {
-            const data = {};
-            for(let key of fd.keys()) {
-                data[key] = fd.get(key);
-            }
-            return data;
-        }
-
-        const sendData = async (url, data) => {
-        const response = await fetch(url, {
-            method: 'POST',
-            headers: {
-            'Content-Type':  'application/json'
-            },
-            body: JSON.stringify(data)
-        })
-        return response;
-        }
-        
-    </script>
+    <script src="/js/entry.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
