--- a/templates/login.html
+++ b/templates/login.html
@@ -33,6 +33,9 @@
                   <li><a class="dropdown-item" href="/vocations/plumbing">Plumbing</a></li>
                   <li><a class="dropdown-item" href="/vocations/welding">Welding</a></li>
                 </ul>
+                <li class="nav-item">
+                  <a class="nav-link" href="/entry">Entry</a>
+                </li>
                 <!-- Modal for Login -->
                 <li class="nav-item">
                     <div class="container">
