--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Skilled Tradesman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +82,7 @@
     <!-- Main -->
     <main>  
       
-      <div class="card-container d-flex p-6 justify-content-around flex-wrap" style=" margin-bottom: 80px">
+      <div class="card-container d-flex p-6 mb-3 justify-content-around flex-wrap">
         <div class="card" style="width: 22rem; margin-top: 20px;" id="randomImg0">
           <img src="https://images.unsplash.com/photo-1591768793355-74d04bb6608f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2552&q=80" class="card-img-top" alt="...">
           <span></span>
@@ -139,7 +139,7 @@
       </div>
     </main>
     <!-- Footer -->
-    <footer class="footer py-3 bg-dark fixed-bottom">
+    <footer class="footer py-3 bg-dark static-bottom">
       <div class="container text-center">
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
