add structure for about section

--- a/templates/about.html
+++ b/templates/about.html
@@ -82,7 +82,28 @@
       </div>
     </div>
   </nav>  
+  <div class="about-container d-flex row justify-content-around">
+    <div class="card" style="width: 18rem;">
+      <img src="..." style="border-radius: 2px; "class="card-img-top" alt="Phillip Mann">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
 
+    <div class="card" style="width: 18rem;">
+      <img src="..." style="border-radius: 2px" class="card-img-top" alt="Theodore Wetekamp">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="..." style="border-radius: 2px" class="card-img-top" alt="Kingsley Onwuharonye">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+  </div>
 
 
     <!-- Footer -->
