--- a/templates/about.html
+++ b/templates/about.html
@@ -82,18 +82,67 @@
       </div>
     </div>
   </nav>  
-
-
-
-    <!-- Footer -->
-    <footer class="footer py-3 bg-dark fixed-bottom">
-      <div class="container text-center">
-        <span class="text-light">Skilled Tradesman - 2021</span>
+  <!-- Main --> 
+  <main class="d-flex p-4 justify-content-center">
+    <div class="card" style="width: 18rem; margin: 2rem;">
+      <img src="../assets/phil2.jpeg" class="card-img-top" alt="Philip Mann">
+      <div class="card-body">
+        <h5 class="card-title">Philip Mann</h5>
+        <p class="card-text">Professional Driver transitioning into Software Development.</p>
       </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <div class="card-body">
+        <a href="https://www.linkedin.com/in/philip-mann-b7989b173/" class="card-link">LinkedIn</a>
+        <a href="https://github.com/Philip-Mann" class="card-link">GitHub</a>
+      </div>
+    </div>
 
+    <div class="card" style="width: 18rem; margin: 2rem;">
+      <img src="../assets/Ted2.jpg" class="card-img-top" alt="Ted Wetekamp">
+      <div class="card-body">
+        <h5 class="card-title">Ted Wetekamp</h5>
+        <p class="card-text">Resourceful leader with broad industry and technical experience in successful project and program management to achieve strategic and technical goals and objectives.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <div class="card-body">
+        <a href="https://www.linkedin.com/in/ted-wetekamp-a6a2281" class="card-link">LinkedIn</a>
+        <a href="https://github.com/Twetekamp" class="card-link">GitHub</a>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem; margin: 2rem;">
+      <img src="../assets/Kingsley.jpg" class="card-img-top" alt="Kingsley Onwuharon">
+      <div class="card-body">
+        <h5 class="card-title">Kingsley Onwuharon</h5>
+        <p class="card-text">Hardworking, determined individual with 5 years experience in the non-profit sector.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">LinkedIn</a>
+        <a href="https://github.com/kingsonwu" class="card-link">GitHub</a>
+      </div>
+    </div>
+  </main>
+  <!-- Footer -->
+  <footer class="footer py-3 bg-dark fixed-bottom">
+    <div class="container text-center">
+      <span class="text-light">Skilled Tradesman - 2021</span>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 </html>
