restructure bootstrap cards and add social media icons

--- a/templates/about.html
+++ b/templates/about.html
@@ -84,54 +84,57 @@
   </nav>  
   <!-- Main --> 
   <main class="d-flex p-4 justify-content-center">
-    <div class="card" style="width: 18rem; margin: 2rem;">
+    <div class="card" style="width: 18rem; height: 35rem; margin: 2rem;">
       <img src="../assets/phil2.jpeg" class="card-img-top" alt="Philip Mann">
       <div class="card-body">
         <h5 class="card-title">Philip Mann</h5>
         <p class="card-text">Professional Driver transitioning into Software Development.</p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
       <div class="card-body">
-        <a href="https://www.linkedin.com/in/philip-mann-b7989b173/" class="card-link">LinkedIn</a>
-        <a href="https://github.com/Philip-Mann" class="card-link">GitHub</a>
+        <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="https://github.com/Philip-Mann/" role="button">
+          <i class="fab fa-github"></i>
+          GitHub
+      </a>
+      <a class="btn btn-primary btn-social btn-linkedin" href="https://www.linkedin.com/in/philip-mann-b7989b173" role="button">
+        <i class="fab fa-linkedin"></i>
+        LinkedIn
+      </a>
       </div>
     </div>
+  </div>
 
-    <div class="card" style="width: 18rem; margin: 2rem;">
-      <img src="../assets/Ted2.jpg" class="card-img-top" alt="Ted Wetekamp">
+  <div class="card" style="width: 18rem; margin: 2rem;">
+    <img src="../assets/Ted2.jpg" class="card-img-top" alt="Ted Wetekamp">
+    <div class="card-body">
+      <h5 class="card-title">Ted Wetekamp</h5>
+      <p class="card-text">Resourceful leader with broad industry and technical experience in successful project and program management to achieve strategic and technical goals and objectives.</p>
       <div class="card-body">
-        <h5 class="card-title">Ted Wetekamp</h5>
-        <p class="card-text">Resourceful leader with broad industry and technical experience in successful project and program management to achieve strategic and technical goals and objectives.</p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <div class="card-body">
-        <a href="https://www.linkedin.com/in/ted-wetekamp-a6a2281" class="card-link">LinkedIn</a>
-        <a href="https://github.com/Twetekamp" class="card-link">GitHub</a>
+        <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="https://github.com/TWetekamp" role="button">
+          <i class="fab fa-github"></i>
+          GitHub
+      </a>
+      <a class="btn btn-primary btn-social btn-linkedin" href="https://www.linkedin.com/in/ted-wetekamp-a6a2281" role="button">
+        <i class="fab fa-linkedin"></i>
+        LinkedIn
+      </a>
       </div>
     </div>
+  </div>
 
-    <div class="card" style="width: 18rem; margin: 2rem;">
-      <img src="../assets/Kingsley.jpg" class="card-img-top" alt="Kingsley Onwuharon">
+  <div class="card" style="width: 18rem; height: 35rem; margin: 2rem;">
+    <img src="../assets/Kingsley.jpg" class="card-img-top" alt="Kingsley Onwuharonye">
+    <div class="card-body">
+      <h5 class="card-title">Kingsley Onwuharonye</h5>
+      <p class="card-text"> Transitioning from Sales to Software Development.  </p>
       <div class="card-body">
-        <h5 class="card-title">Kingsley Onwuharon</h5>
-        <p class="card-text">Hardworking, determined individual with 5 years experience in the non-profit sector.</p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">LinkedIn</a>
-        <a href="https://github.com/kingsonwu" class="card-link">GitHub</a>
+        <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="github.com/kingsonwu" role="button">
+          <i class="fab fa-github"></i>
+          GitHub
+      </a>
+      <a class="btn btn-primary btn-social btn-linkedin" href="linkedin.com/konwu" role="button">
+        <i class="fab fa-linkedin"></i>
+        LinkedIn
+      </a>
       </div>
     </div>
   </main>
