fix error that prevented site from being responsive

--- a/templates/about.html
+++ b/templates/about.html
@@ -83,12 +83,13 @@
     </div>
   </nav>  
   <!-- Main --> 
-  <main class="d-flex p-4 justify-content-center">
-    <div class="card" style="width: 18rem; height: 35rem; margin: 2rem;">
+  <main>
+    <div class="card-container d-flex p-4 justify-content-center mb-4 flex-wrap" >
+    <div class="card" style="width: 18rem; margin: 2rem;">
       <img src="../assets/phil2.jpeg" class="card-img-top" alt="Philip Mann">
       <div class="card-body">
         <h5 class="card-title">Philip Mann</h5>
-        <p class="card-text">Professional Driver transitioning into Software Development.</p>
+        <p class="card-text">Seasoned professional driver transistioning into full stack web development. Quick learner who's able to work well with anyone.</p>
       </div>
       <div class="card-body">
         <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="https://github.com/Philip-Mann/" role="button">
@@ -101,7 +102,7 @@
       </a>
       </div>
     </div>
-  </div>
+
 
   <div class="card" style="width: 18rem; margin: 2rem;">
     <img src="../assets/Ted2.jpg" class="card-img-top" alt="Ted Wetekamp">
@@ -121,11 +122,11 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem; height: 35rem; margin: 2rem;">
+  <div class="card" style="width: 18rem; margin: 2rem;">
     <img src="../assets/Kingsley.jpg" class="card-img-top" alt="Kingsley Onwuharonye">
     <div class="card-body">
       <h5 class="card-title">Kingsley Onwuharonye</h5>
-      <p class="card-text"> Transitioning from Sales to Software Development.  </p>
+      <p class="card-text"> Experienced sales professional who stumbled upon the world of software development. Always ideating and looking to think of ways to solve the worlds many problems. </p>
       <div class="card-body">
         <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="github.com/kingsonwu" role="button">
           <i class="fab fa-github"></i>
@@ -137,6 +138,8 @@
       </a>
       </div>
     </div>
+    </div>
+  </div>
   </main>
   <!-- Footer -->
   <footer class="footer py-3 bg-dark fixed-bottom">
