working on socket.io still

--- a/templates/home.html
+++ b/templates/home.html
@@ -74,6 +74,9 @@
                   <li class="nav-item">
                       <a class="nav-link" href="/about">About</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/watercooler">Water Cooler</a>
+                  </li>
             </li>
           </ul>
         </div>
@@ -82,7 +85,7 @@
     <!-- Main -->
     <main>  
       
-      <div class="card-container d-flex p-6 mb-3 justify-content-around flex-wrap">
+      <div class="card-container d-flex p-6 mb-3 justify-content-around flex-wrap" style="border: 1px solid red; margin-bottom: 10rem;">
         <div class="card" style="width: 22rem; margin-top: 20px;" id="randomImg0">
           <img src="https://images.unsplash.com/photo-1591768793355-74d04bb6608f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2552&q=80" class="card-img-top" alt="...">
           <span></span>
@@ -139,7 +142,7 @@
       </div>
     </main>
     <!-- Footer -->
-    <footer class="footer py-3 bg-dark static-bottom">
+    <footer class="footer py-3 bg-dark fixed-bottom">
       <div class="container text-center">
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
