--- a/templates/category.html
+++ b/templates/category.html
@@ -74,6 +74,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/watercooler">Water Cooler</a>
+                </li>
           </li>
         </ul>
         <form class="d-flex">
