--- a/templates/entry.html
+++ b/templates/entry.html
@@ -35,7 +35,7 @@
                     <li><a class="dropdown-item" href="/vocations/welding">Welding</a></li>
                     </ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="/entry">Entry</a>
+                        <a class="nav-link" href="#">Entry</a>
                     </li>
                     <!-- Modal for Login -->
                     <li class="nav-item">
@@ -73,6 +73,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/watercooler">Water Cooler</a>
                     </li>
             </li>
             </ul>
