Add delete button

--- a/templates/about.html
+++ b/templates/about.html
@@ -128,11 +128,11 @@
       <h5 class="card-title">Kingsley Onwuharonye</h5>
       <p class="card-text"> Experienced sales professional who stumbled upon the world of software development. Always ideating and looking to think of ways to solve the worlds many problems. </p>
       <div class="card-body">
-        <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="github.com/kingsonwu" role="button">
+        <a class="btn btn-dark text-light btn-social mt-0 btn-github" href="https://github.com/kingsonwu" role="button">
           <i class="fab fa-github"></i>
           GitHub
       </a>
-      <a class="btn btn-primary btn-social btn-linkedin" href="linkedin.com/konwu" role="button">
+      <a class="btn btn-primary btn-social btn-linkedin" href="https://www.linkedin.com/konwu" role="button">
         <i class="fab fa-linkedin"></i>
         LinkedIn
       </a>
