--- a/templates/category.html
+++ b/templates/category.html
@@ -94,6 +94,7 @@
             <p class="card-text">${job.desc}.</p>
             <p class="card-text"><b>Skills:</b> ${job.skills}.</p>
             <a href="${job.website}" class="btn btn-dark">Apply Now</a>
+            <button type="button" class="btn btn-dark" data-delete-job data-delete-id=${job.id}>Delete</button>
             </div>
         </div>
     </div>  
@@ -105,6 +106,7 @@
         <span class="text-light">Skilled Tradesman - 2021</span>
       </div>
     </footer>
+    <script src="/js/deletejob.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
