Fix portrait links

--- a/templates/about.html
+++ b/templates/about.html
@@ -85,7 +85,7 @@
   <main>
     <div class="card-container d-flex p-4 justify-content-center mb-4 flex-wrap" >
     <div class="card" style="width: 18rem; margin: 2rem;">
-      <img src="../assets/phil2.jpeg" class="card-img-top" alt="Philip Mann">
+      <img src="assets/phil2.jpeg" class="card-img-top" alt="Philip Mann">
       <div class="card-body">
         <h5 class="card-title">Philip Mann</h5>
         <p class="card-text">Seasoned professional driver transistioning into full stack web development. Quick learner who's able to work well with anyone.</p>
@@ -104,7 +104,7 @@
 
 
   <div class="card" style="width: 18rem; margin: 2rem;">
-    <img src="../assets/Ted2.jpg" class="card-img-top" alt="Ted Wetekamp">
+    <img src="assets/Ted2.jpg" class="card-img-top" alt="Ted Wetekamp">
     <div class="card-body">
       <h5 class="card-title">Ted Wetekamp</h5>
       <p class="card-text">Resourceful leader with broad industry and technical experience in successful project and program management to achieve strategic and technical goals and objectives.</p>
@@ -122,7 +122,7 @@
   </div>
 
   <div class="card" style="width: 18rem; margin: 2rem;">
-    <img src="../assets/Kingsley.jpg" class="card-img-top" alt="Kingsley Onwuharonye">
+    <img src="assets/Kingsley.jpg" class="card-img-top" alt="Kingsley Onwuharonye">
     <div class="card-body">
       <h5 class="card-title">Kingsley Onwuharonye</h5>
       <p class="card-text"> Experienced sales professional who stumbled upon the world of software development. Always ideating and looking to think of ways to solve the worlds many problems. </p>
@@ -131,7 +131,7 @@
           <i class="fab fa-github"></i>
           GitHub
       </a>
-      <a class="btn btn-primary btn-social btn-linkedin" href="https://www.linkedin.com/konwu" role="button">
+      <a class="btn btn-primary btn-social btn-linkedin" href="https://www.linkedin.com/in/konwu/" role="button">
         <i class="fab fa-linkedin"></i>
         LinkedIn
       </a>
